add: route to retrieve random topics
